<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#009688"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/header_main"
            app:titleTextColor="#FFFFFF"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/title_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/title_main"
            android:textColor="#979797"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/description_main"
            android:layout_width="351dp"
            android:layout_height="43dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:text="@string/description_main"
            android:textColor="#989898"
            android:textSize="16sp"
            tools:ignore="MissingConstraints" />

        <ScrollView
            android:layout_width="409dp"
            android:layout_height="555dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16sp"
                android:paddingTop="16sp"
                android:paddingRight="16sp"
                android:paddingBottom="16sp">

                <TextView
                    android:id="@+id/tv_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nombre"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txt_nombre"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tv_nombre"
                    android:inputType="text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_apellido"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txt_apellido"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tv_apellido"
                    android:inputType="text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_telefono"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_telefono"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/txt_telefono"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/tv_telefono"
                        android:inputType="phone"
                        android:textSize="20sp" />

                    <Spinner
                        android:id="@+id/sp_telefono"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp" />
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_email"
                    android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <EditText
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tv_email"
                    android:inputType="text"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/sp_email"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp" />
            </LinearLayout>

                <TextView
                    android:id="@+id/tv_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_direccion"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txt_direccion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/tv_direccion"
                    android:inputType="text"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/tv_nacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_nacimiento"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/txt_nacimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_nacimiento"
                    android:inputType="text"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#673AB7"
                    android:onClick="datos_extras"
                    android:text="Continuar"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>